[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/player/PlayerHUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/levels/CloudsShader.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/levels/Ocean.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/levels/tileset_32x32.tres" type="TileSet" id=5]
[ext_resource path="res://src/levels/BaseLevel.gd" type="Script" id=6]
[ext_resource path="res://src/main/PauseMenu.tscn" type="PackedScene" id=7]

[node name="BaseLevel" type="Node2D"]
script = ExtResource( 6 )

[node name="Ocean" parent="." instance=ExtResource( 4 )]
ocean_size = 2560

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 1280, 1280 )

[node name="CloudsShader" parent="." instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 2560.0
margin_bottom = 2560.0

[node name="PlayerHUD" parent="." instance=ExtResource( 1 )]

[node name="PauseMenu" parent="." instance=ExtResource( 7 )]

[connection signal="reached_edge" from="Ocean" to="." method="_on_Ocean_reached_edge"]
[connection signal="died" from="Player" to="." method="_on_Player_died"]
[connection signal="mutiny" from="Player" to="." method="_on_Player_mutiny"]
